iptables-3.txt
########################################################

Chain INPUT (policy ACCEPT 76 packets, 10772 bytes)
num   pkts bytes target     prot opt in     out     source               destination
1     7864  481K ACCEPT     all  --  lo     *       0.0.0.0/0            0.0.0.0/0
2        0     0 ACCEPT     udp  --  *      *       8.8.8.8              0.0.0.0/0            udp spt:53
3        0     0 ACCEPT     udp  --  *      *       8.8.4.4              0.0.0.0/0            udp spt:53
4        0     0 ICMP       icmp --  *      *       0.0.0.0/0            0.0.0.0/0
5        0     0 NTP        udp  --  *      *       0.0.0.0/0            0.0.0.0/0            udp dpt:123
6      795 52318 SSH        tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            tcp dpts:20:22
7        0     0 ZBX        tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            multiport dports 10050,10051
8     1001  194K WEB        tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            multiport dports 80,443
9        0     0 SNMPTRAP   udp  --  *      *       0.0.0.0/0            0.0.0.0/0            udp dpt:162
10       0     0 DROP       tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            tcp flags:0x17/0x02
11    285K  445M ACCEPT     all  --  *      *       0.0.0.0/0            0.0.0.0/0            state RELATED,ESTABLISHED

Chain FORWARD (policy ACCEPT 0 packets, 0 bytes)
num   pkts bytes target     prot opt in     out     source               destination

Chain OUTPUT (policy ACCEPT 190K packets, 10M bytes)
num   pkts bytes target     prot opt in     out     source               destination
1        0     0 ACCEPT     icmp --  *      *       0.0.0.0/0            0.0.0.0/0            icmptype 8
2        0     0 ACCEPT     icmp --  *      *       0.0.0.0/0            0.0.0.0/0            icmptype 0

Chain ICMP (1 references)
num   pkts bytes target     prot opt in     out     source               destination
1        0     0 ACCEPT     icmp --  *      *       0.0.0.0/0            0.0.0.0/0            limit: avg 5/sec burst 5

Chain NTP (1 references)
num   pkts bytes target     prot opt in     out     source               destination

Chain SSH (1 references)
num   pkts bytes target     prot opt in     out     source               destination
1      795 52318 ACCEPT     tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            tcp dpt:22

Chain ZBX (1 references)
num   pkts bytes target     prot opt in     out     source               destination
1        0     0 ACCEPT     tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            tcp dpt:10050
2        0     0 ACCEPT     tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            tcp dpt:10051

Chain WEB (1 references)
num   pkts bytes target     prot opt in     out     source               destination
1     1001  194K ACCEPT     tcp  --  *      *       0.0.0.0/0            0.0.0.0/0            multiport dports 80,443
2        0     0 ACCEPT     udp  --  *      *       0.0.0.0/0            0.0.0.0/0            udp dpt:162

Chain SNMPTRAP (1 references)
num   pkts bytes target     prot opt in     out     source               destination

Chain SQL (0 references)
num   pkts bytes target     prot opt in     out     source               destination

########################################################

# Generated by iptables-save v1.8.4 on Sun Feb 19 21:41:04 2023
*raw
:PREROUTING ACCEPT [291225:445526323]
:OUTPUT ACCEPT [187160:9678217]
-A PREROUTING -p udp -m udp --sport 53 -j NOTRACK
-A OUTPUT -p udp -m udp --dport 53 -j NOTRACK
COMMIT
# Completed on Sun Feb 19 21:41:04 2023
# Generated by iptables-save v1.8.4 on Sun Feb 19 21:41:04 2023
*filter
:INPUT ACCEPT [76:10772]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [187160:9678217]
:ICMP - [0:0]
:NTP - [0:0]
:SSH - [0:0]
:ZBX - [0:0]
:WEB - [0:0]
:SNMPTRAP - [0:0]
:SQL - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 8.8.8.8/32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -s 8.8.4.4/32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p icmp -j ICMP
-A INPUT -p udp -m udp --dport 123 -j NTP
-A INPUT -p tcp -m tcp --dport 20:22 -j SSH
-A INPUT -p tcp -m multiport --dports 10050,10051 -j ZBX
-A INPUT -p tcp -m multiport --dports 80,443 -j WEB
-A INPUT -p udp -m udp --dport 162 -j SNMPTRAP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A ICMP -p icmp -m limit --limit 5/sec -j ACCEPT
-A SSH -p tcp -m tcp --dport 22 -j ACCEPT
-A ZBX -p tcp -m tcp --dport 10050 -j ACCEPT
-A ZBX -p tcp -m tcp --dport 10051 -j ACCEPT
-A WEB -p tcp -m multiport --dports 80,443 -j ACCEPT
-A WEB -p udp -m udp --dport 162 -j ACCEPT
COMMIT
# Completed on Sun Feb 19 21:41:04 2023

########################################################
